--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,7 @@ CodeCoverage/
 *.VisualState.xml
 TestResult.xml
 nunit-*.xml
+AnandDemoWinform/.vs/AnandDemoWinform/FileContentIndex/a8a2bdce-88a6-4d8d-9ec3-3b2b3d62d050.vsidx
+AnandDemoWinform/.vs/AnandDemoWinform/FileContentIndex/8d8a9e6c-30fd-425a-9293-9fd19d705517.vsidx
+AnandDemoWinform/.vs/AnandDemoWinform/FileContentIndex/a8a2bdce-88a6-4d8d-9ec3-3b2b3d62d050.vsidx
+AnandDemoWinform/.vs/AnandDemoWinform/FileContentIndex/a8a2bdce-88a6-4d8d-9ec3-3b2b3d62d050.vsidx
